# generic_django_daisyui

./: .env.example  .gitignore  DEPLOYMENT.md  README.MD  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deployment.yml
django/: .gitignore  CHANGELOG.md  Dockerfile  README.md  build.sh  bun.lockb  package.json  pyproject.toml  render.yaml  tailwind.config.js  vite.config.js
django/src/apps/home/: urls.py  views.py
django/src/config/: settings.py  urls.py
django/src/static/src/: main.js
django/src/templates/: index.html
reverse-proxy/: Dockerfile  docker-entrypoint.sh  nginx.conf
reverse-proxy/letsencrypt/: ssl-dhparams.pem
reverse-proxy/templates/: default.conf.template
