[project]
name = "product-rank"
version = "0.1.0"
description = "Product Ranking Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==4.2.8",
    "python-dotenv==1.0.0",
    "whitenoise==6.5.0",
    "gunicorn==21.2.0",
    "psycopg2-binary>=2.9.10",
]


[tool.ruff]
line-length = 88
target-version = "py313"

[dependency-groups]
dev = [
    "django-browser-reload==1.12.1",
    "django-debug-toolbar>=4.2.0",
]
